--- a/trazzo_flutter/pubspec.yaml
+++ b/trazzo_flutter/pubspec.yaml
@@ -10,7 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_bloc: ^9.1.1
   provider: ^6.1.2
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
