--- a/trazzo_flutter/pubspec.yaml
+++ b/trazzo_flutter/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   provider: ^6.1.2
   equatable: ^2.0.5
+  go_router: ^14.0.2
 
 dev_dependencies:
   flutter_test:
